--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ddgs>=9.10.0",
+    "faiss-cpu>=1.13.2",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
     "langchain-openai>=1.1.7",
