--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ dependencies = [
     "faiss-cpu>=1.13.2",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
-    "langchain-openai>=1.1.7",
+    "langchain-groq>=1.1.2",
+    "langchain-huggingface>=1.2.0",
     "langgraph>=1.0.7",
     "langgraph-checkpoint-postgres>=3.0.4",
-    "langgraph-checkpoint-sqlite>=3.0.3",
     "langsmith>=0.6.6",
     "psycopg[binary]>=3.3.2",
     "pypdf>=6.7.0",
+    "sentence-transformers>=5.2.2",
     "streamlit>=1.53.1",
     "youtube-transcript-api>=1.2.4",
 ]
